@@ -4,6 +4,7 @@ Hash: SHA256
 DIST gentoo-headers-2.4.33-1.tar.bz2 11542 SHA256 a1517b0ea6619f018d0dfbb7457be122a0f80b5e76b995fdedaa9423951fb37d SHA512 47e9a9b35aae8ea8511dba4607dca52dc7ff87f8091a263065dac76b635456c2600ae1217e197286f89fc8edd632a8c754ec5525a14d6955266d222f1cfa4219 WHIRLPOOL ac7a4e31782c2c4d38e695fdd4393789a2da4f1bb45dc66a17ea0782da6cf60470d4c2e9af9dedc40b64919b6d6fc0547f252862d377828fad55abc079853cae
 DIST gentoo-headers-2.4.36-1.tar.lzma 10846 SHA256 2120f941e11dde038a8ad3cf47ce4f6eb4b5cba3fa59a378113c4cf57544509d SHA512 fd3746708096f692b2190b514c6b2511fb5571ec772adee81e37c46825d642cfa31ffe9e6a9b343079fa17927ca46780da08306d3e2962b0ecdb1fb386d653f9 WHIRLPOOL 063abe2b3dff20585adf4f58bb2e93f1bfe71fe83aa36a642f15fb8e3c6561491eaf3dc3edf75c71d786e9d34ebfe00a8734afff6872840ba120f4e1f6f7def7
 DIST gentoo-headers-3.1-2.tar.xz 3656 SHA256 ee30fed6c594ff56309aa7cad018419e8c8cde8b2ba85332ba7473d967ebe972 SHA512 c6513a71044f2eaa032bf2045c9db973c1eb5eca440621623c1b86ec28badd35c874035b176b74b1df550db0fd04aa91cf8c290962c66e4b090e3b88b80fd188 WHIRLPOOL d404efbf90ed12475467558dc92f29b4bea17bf1f7c135b2c7a3d68c4b7910ef587ee571982e7801f2760ea0586af6b63323534fc353a081477304b2270162a7
+DIST gentoo-headers-3.10-1.tar.xz 4412 SHA256 6a04662378bbc35eadb5cfe7d39f6eca313a7969fae15f65d6b7445727ff19a9 SHA512 780048e866ce3c0790f236fa5682a114e3020882d8321d05f07b0cc877d7624563f6f5b248807981cda8c21c72ed2754e1b8d69c51b7fbe0e5d4d570523c10c5 WHIRLPOOL f0c69e1206379a3b678d7ce48a40ce46abdbb739bcca2b832f924c85c2403a206db25eb6195a0eed9546a848003b784557b76eed61d9baa9e40d2d6209668e0b
 DIST gentoo-headers-3.2-3.tar.xz 3972 SHA256 f3c676a71429ae9309637790651cabee9c190915b3b15462abca35971e0d8822 SHA512 df3bbce64875b4036cb56ef687d9dd67df6eab5b166d915fc79e583fcd392e93068e0b3a88f169405bf006e110041221a02145106903ffc3c0a0b67e51fe0461 WHIRLPOOL babc84b25ce551831156cb09057f8efe05596592e4a8ce1cc4b73e993e585b6aa0f8d983e5c935dc9da04ead47531b43e06e9cb2e93a6a1ef4c5db13687206d9
 DIST gentoo-headers-3.3-2.tar.xz 34172 SHA256 4b50911d5d53c7cdcfe07e6721015d0abe5fe2859117410b399d657ea41f3e36 SHA512 edb4a064cd26f3bb216038c40e139e0da9907beca95ecf240f1719ea5b159eed1bc60cecda25278dce666ea82edb72ef24ef343b4ceae4a00ba2ffd31857696e WHIRLPOOL d3961dfdc9d007ee710fb5fe4007c822d932fc1f857fd0bc442e88bdc097f1c2bee8a0d26dd291f1094e26a927a4ec5b1255557a40614ac37e7eb9f021f38537
 DIST gentoo-headers-3.4-1.tar.xz 3524 SHA256 96575df8c65d749b832880d41db4b694ccaa76a6386eef80e4e9cd123625bfee SHA512 29baad764311d100815c2572e1ba868cf75f0fbf8a1ae38e047daf729b305e059fb94a8c521b88735f5d4678316c314a191e066efa96263347c2c7612a5ab6ee WHIRLPOOL 0160261bc0397a101fefaf66c1e647d7696fe64203b288f358ff8448c49c22e4e37eae7411dde3c11decd578355c825c27bd959e41b209f029d688e184da784e
@@ -15,6 +16,7 @@ DIST gentoo-headers-3.7-1.tar.xz 3212 SHA256 f07407df6577a1a544ed485e0285ad6adca
 DIST gentoo-headers-3.8-1.tar.xz 3204 SHA256 6790d6934be43251bcc40d19da3776cd004affcf8f62bac7bc9cde91cfd065ba SHA512 b5534730f4a50b41b220f5041aad6b871a7a05bb2fa19f67523baa3788a9ab355cf26f3f3443e50e7defe754a6b828e169f8ce5dc427de3a6690adccaa33add3 WHIRLPOOL efad77ad1a3788eb088393ee67d688d981c768fc4ad5d40b7764e8811e0e002ad0b9cdd2590f61997b277d86414a1e68bc709e923876d91a545a184530da54f2
 DIST gentoo-headers-3.9-1.tar.xz 3204 SHA256 b7f54447f0787cef16796e64a52fe7a4891d1b0c7198d87d00b4203eb40a938a SHA512 c206dccafa969d80406cdc4b6747aeff7451c5eab6b4b35827eaa102cdda4f69a3944d79b3b78276ca5122a68e980bf047f2cc53255aff7959fa5863cbfdf59c WHIRLPOOL 19e84a5ef8274adc9cffe383f4c95180210c8fb871082eab90bdc8d7ec98d617ab858e6c3aa19f61fa388f171ee695553b4aea1b6853a8d50a96debb15fda471
 DIST gentoo-headers-base-3.1.tar.xz 4814816 SHA256 76bc4baeb1d039a171f6316d3ac6b8f50341937242570988d6705b2d9b02a0c0 SHA512 1218eba261172f5480d6b399be25f9fff0d3c9de48f6b47669820d746957cd9225a7beb3d94eb3d7779c1d28a97da0623dd494a56c8761c092d939afcd99d42f WHIRLPOOL 85869c824fa2a691f50feb94d85aa63103e4cece793273e8d9eca7b23e8459e5fbe31b46e1f97e4f62a1fc8e03b27827ac70ed061369c9df8efadc6e8beb7962
+DIST gentoo-headers-base-3.10.tar.xz 3643164 SHA256 ac054e6370381f6ba504371e6125551489f0dbb3207a79f9f328a0b9a6eac8bb SHA512 1c2c6cbdd5dd7bcabdd0854376202806bd45af519046aa776c3cad54730b8d4f5b0eb7e7bc580314aca070ce7f9f548c43b74fd11c8fc19e4a65c8834e0112ca WHIRLPOOL f86788bffee26f9598fa9d94ad4c590558d6d08f85c4d7888e9115aefe4d783a4234f835c93f2137abdebba8f84d5a8fdb89e9e21bb72073902a49584b0b9932
 DIST gentoo-headers-base-3.2.tar.xz 4912432 SHA256 b22faf6f9c64047c29b5d5d8787dce253df99dd2fd29e69c4de491ab002a6675 SHA512 4574574843ff3c96f8aaafb19eef7d5488388ba3ad95dd249dbb755ab64085abeb022c8d3d0b0c535521b92b448b2e43b4049446d6e23d9059b26a362d0ad9eb WHIRLPOOL e2be5eb12e3071288f95e58ce9ea9c8de78af02395b683b2acf6e2edb5ac1f14f8d26099e0f49b8e7c44b79a015a190da1419651c58915d45b3bd3e25eab191d
 DIST gentoo-headers-base-3.3.tar.xz 5065432 SHA256 bddc280496d8709039c02cee50dc14106ac6ea6bfafe99abec9f9470b19582ea SHA512 27141a91909fb5c48e5e9cb76629e11f92eb0cd3c3b87b939a5fa524acc4d7e5a412e8f3f3b2e07239f6530052e94724b6d638e584f7390090674527768ebe19 WHIRLPOOL 15915c3f303327fd79b55700f3afd081ef86334b25cbe5785ceea6260050609f892a7bbb1410c01af57d96f5cea5119aa21d0c3b8ba550f40d783b3e1217241e
 DIST gentoo-headers-base-3.4.tar.xz 5115932 SHA256 c1aceea837dc6c05c869f41897e393cc14ef4b8b3e77440b40ae1684360fc154 SHA512 2400cb99d275c6d3be8fa9d3e5a4e2e1db9377227b1ae561ac3511659f10c7d1dc667d5fd5b43b9acde8d69bd299273b03b2413a98de70e6f79f0df210cf8ee2 WHIRLPOOL 5d0039e1bfdea386c20d58e84a170c69db48876fc31c09843dd48583c4fc095d15cc19a353c162b709536c8893740175ba86dca5c4e7322c36fa036cc510e50b
@@ -29,6 +31,7 @@ DIST patch-2.4.33.3.xz 5796 SHA256 89fe1dbf5cb9513b73f9825328765c342f6054186f0b4
 EBUILD linux-headers-2.4.33.3.ebuild 609 SHA256 6884f13a2085f1a39b1872e75ca56c877367de4113cf4ed0ced64ff7cc39bd84 SHA512 72b711e6215a598311a98f9cb90c172ea920141dd3d6c9b1423ad7f6b3ca4c648f5aeabe66cae0b71b49a246af1d37ae5929efbd4101188b7765947e7a4cc662 WHIRLPOOL 9fbc139358ba75d7820690c7146e08c75b483d382e9f1ede168212c3eb6a3833df6663bc36cb9b8e3e1b13a79aeed262bffb7c784e5f76201e21c5c96756ad59
 EBUILD linux-headers-2.4.36.ebuild 620 SHA256 34aeac399c62d14f244ce03dfcb28d352a1aa446980ff8948395992346ce8234 SHA512 8122f19a91acd33710b277bdf72b8ef47f6c699411259cb614d29eabe669a00956842f1269d3cfb829c99429dc64117488db085e4c06bbeee01c44d0abfd1c8e WHIRLPOOL 4f23ec450fa52c2dd29d62825e43ee2ea324d730597d5d9f54ee71fd695a2862cf8e75960adfc7a0e4969f526c58d4b71bca3a1935c723885794b34ac458ac1d
 EBUILD linux-headers-3.1.ebuild 1465 SHA256 56f1f39b4b8a8f861d11386450db0c5cfcd9a93e91c077b514e1c7d9b86c8296 SHA512 54cf386cbdb82001d73bff2e355bcb1f97482f8663550cf90233ebcf9221c3fde15ba9afe47e8bb99eb95c41f01663366982180e00e58b623449ed8740a2abdc WHIRLPOOL 5747b1d0acbf70926b535debc69e604c97669bbf74d78e7257cdaaa516184931b945391e464f4cb42dbbc833d061c85a1847a904987f9ab355b050fe23fb1fbd
+EBUILD linux-headers-3.10.ebuild 1396 SHA256 02d137d6e5ca9d9efb0b2451e0102354447e6bf1afdddfb612178e31bdfa1368 SHA512 b41ffa321334823cdf5968faaf3ca176af1b2fea386de52ea9bd3ad0bac6c81224300e25169ecaf7ba3697e937da1055177c9ee1b6bc978577561febd35e6fa0 WHIRLPOOL edd32176f8259b51ab517a588c0a1354db0173fa532c74fec3decefbd7395991b24a666538816b53450471ca6f17cd3d32a6a352abcc3d1f873526abc2e4e6d6
 EBUILD linux-headers-3.2-r1.ebuild 1479 SHA256 1e1bf8e4222bd637e15bf63cfa3d237cdc2fe766d08416aba8931c403b2be943 SHA512 84e2d5a932fda3ae0d6e163c08a829f211c96bcef336d0f78308b383007d138192f6ddcbc99f4e329c36d069fa82904cd807970d098458146da4f2626c422962 WHIRLPOOL 22ae1da282c3d5956bbe6594aef8b955125794b227931204dcd15e0fb98547ceb0ae2b52b5ef495c2740850536c57a2a991137a11f2820573bec332a25d941b1
 EBUILD linux-headers-3.3.ebuild 1476 SHA256 f79706fc7a57f3860e60c6743d25265d6a20d5acb5de571688c189a66748839a SHA512 d37d5f8f948c850c9bff695739d526805419b9a14e6ed30bf208de76f9ecd3c977998a5b3c8be23bdf5c6279fec0ac368995ce8d604e8d13ed8aa3e4e17ecff3 WHIRLPOOL b1c5720e1d7260e8fb976232fd5f39ad5d6824c5e176cc941c4b6d9fcc27cf05165d5e3ae02c3941a1a467c2f62cc511150f100a2af7d493a6a5a3c6b499f93a
 EBUILD linux-headers-3.4-r1.ebuild 1372 SHA256 bc945d7062e078506bc185cfe50394febb772cbc7128fdbf91c97337538278fc SHA512 25009e2abcacf345db75142a8f3d619903fa25f841a0180f0810b0a4c9bd74baf8e6a598afe50081ac26f497b62542fa297db8b590ab3e06990d59483914fbd3 WHIRLPOOL 985c0373666c95493a1024e92e1ce2586d3e77417fe35a469955092aadabaa4c81b832b394fb7b4375e4e8511b867682d271436a28e75768f8de2c30644dd870
@@ -39,22 +42,22 @@ EBUILD linux-headers-3.6.ebuild 1375 SHA256 630a9237c33ac12b51ce5697be63c387345d
 EBUILD linux-headers-3.7.ebuild 1375 SHA256 5fc58ab8e3e53eab8ed0bbd62c9830e9fbc052cebd306ada51338a16a6fe3777 SHA512 3f1f7e62db7fd353681ffcc38ca4871754bb09ae19828bfff7cbd74d04ae8f0e45ca0f17eb1aec63206281c976b51009a1681e08ef085204d6e099aca315ec9d WHIRLPOOL 918e7ad6c5864ecb58555a4ee8c93e70c924708318310a35a4a75729ee0c39457ace8c88379f012c2ecdbba7c5d5bec427d380d5210486048eea88d410d07cf2
 EBUILD linux-headers-3.8.ebuild 1388 SHA256 4e89ec02e1317603a557678695922bfc152917fd8998711209533bc0a8d97e77 SHA512 598b61a3183784b3327e558bf97bfad10601be1e0e23851995d3ff64e2ca1873b8e6a0ccf304b84ee8abc7bbadd717dff30f9934c241567af8a84881e46a96d1 WHIRLPOOL b1842d98095967869330803cdb47597ea3c5c8d1a2d27ea2947fc679faea8c1fa0ce11bbe23d536833433d8c30200e33ba1a16a365e5d3974a61a2f460dff94a
 EBUILD linux-headers-3.9.ebuild 1439 SHA256 5054d8b3cda8d61e3f5ffb1b251fc1225129ebc042fb1f9dd3331bbe45df6089 SHA512 0b8d2c984949761dfa75a37c30677cc8f8805b939ffe4e001c7f5901ff4fbabf2b0af9a666408b8e7b03aac6dc4198735adb69e8df66a31834c496505fcf5839 WHIRLPOOL 5697ae2f28db925dc608f47d40805d842d6191a9f70d3e7159100043138a0a45b5db362260f00d33a3c1384071a7705f81b191f60023b15ab2c54062b9683375
-MISC ChangeLog 61917 SHA256 0320f88983f2d8457e642a9902d39d38e8818b76c1c6fc1cc8bce3508cfa87f7 SHA512 d6acf67f5a20ee2e9416070ef283b0e4a20ac856ccad58dd1201925cb8ff119eb55e592de7a956d08ae7be0708cc19e1d46955459f90c94fe556218f834bc0e2 WHIRLPOOL a4825bdf0f507da944699d27be84e7405360d523e204d20645135b5e6faa582042d3c400c0c410d08c9b2da818ab8f14f8f77f51a61fc9cef351722897365298
+MISC ChangeLog 62047 SHA256 16970c7370ba1d003ccc1d57605f374943a6a07f2903e209fa681afcf91cf1b5 SHA512 dca1104b598480fd4918251a302ffa8b1c6fcefbf50ccb92bd75ed7b2e849fc5bb71284c7bae75722de49fa3f1283fda266deb0846e1b3e7f0fdc5f75ea7bf6f WHIRLPOOL f8da8556c7249db11e7ab943455c123c1ce46f987c0d52c6a5606de9b74349c6fd9ba003b0d6300c05a0a1b45fdae00ad5015d8b4cbab3f3cb9f4ad1c64ca339
 MISC metadata.xml 247 SHA256 6858f34fb3375b80b0071f911f6ead887ae327e0e27ecd39be3e8ccb2609fa0a SHA512 b82456bc3441754e0f316575316497d293374ac4bb80e1b7e4b158358a3e920a6da4bb223a97412bbeba8f51ea4555a84267f4ebc8eecdb06941038efd03c47f WHIRLPOOL 96213c23913ccc5a89e2fa924701b916106c15cd24940f7bc2c8896c6a5545f840c1bd21ccc0882a928fd44628cce49c7cd8d25957ffe6c64b4755b467e6344d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRtQosAAoJELEHsLL7fEFW2twP/2DA0Us54hpezw/bmazoGcAw
-el93seRgWJ5sz1ssUSRsKqxfrjei1GC9LvB0C7q1kPWmHFFQJRc+uJ3j6pATLGGs
-j8uDXVTMuhRizwLP/8o/74UBZnX2Srpgf9hqxgkzw8gqJtDlfIG6UmskmEeo1AjY
-ijeqgvq68U8PaAO//IrYNzfYUnjIxjKgS5TUqMQE9LCamnJvVhRS3L/UsGSA5y22
-J6AIwbhilHKUdKOT652glmtdf7dGA5MOGdK3qtBsZuRb4EN+ajhxzz82o5wXn+s7
-CHMRNZId+uVhHW1tNN80Li76uEVEKsnAG2vmxpvCyk1Dyl8bcoeL9ZN2sijDwlOt
-x3RepGjcdQJrcb4C0iA2C5ffnyksVViLhl1gNrKL4nsUfO79gcgAUC1TgfuSgixK
-tHsA7IHnPzHvcLOywdAvmjpAjhSXLHQAZ8iPWQM5qEsN1raDYpijbYtd+wTlhXY0
-PgGsANt2ZTdRuroDH0cwsf0NCNR6cKsOrRv7/t9PTaDDwmJusWWt6YM0ocMZLJSC
-lNv2+sT/v2Ui7Vbstx59ckz8CBtP+V84GBzlD9SZiq3MDiCiP9ppZO2SLxXlm7uD
-g8KUIVbllxXqmpxN1UP8A56pirInlHt2OAu8yEB9scMN+dqNKLaQEmKYL9wlF65J
-VC9nWjv+u8bZOBa3L3Um
-=Dw12
+iQIcBAEBCAAGBQJSDnp3AAoJELEHsLL7fEFW4loP/jqGR4q2vFok23i6Xo4pZtA6
+8tRsyEl/MJUg85ywepwUzu4CljaXU37gjhSMVj6oKPUbPxHqJ5u4hEpGtjThDDMT
+alwxq19S2RjUfYKDUh9oa0D3Zx3JeApbyQTIGqmRpH1Ckq6dfz6BGyfw85HaTz+E
+0ZmoQlW/nNmx+wiE2H/l3vwVVXT9v09lXV+l2HWMyKfQQla3VGiwlFE+lG+WWUCK
+U5yHZzSH0NscP5NTLouzNpk/bGKMPM7a+3OiHwUkNK076mwcSxhweuSGUEJTzEPC
+Ckg9oK6iY41sNvt2blNbBsgG2nAQUszvpuSBGMWP7sffyTqv0ewD7pA5EIjHQLlC
+JC+JPSvUxvNiRQPiq0Z8wpc9Ijsr2PUHk7vy1ZshpQpWtGZkk2NKH7nJBVPKxmLv
+ENDTxtEvt1avh/jBj75TB4c3OsDqD8F518YZejk2aElgyMuJ2ZVFUKVJZ83G2YbC
+Gk7vjatNzPMmtZpufNNRMgOJQ929G+dYz61ayLF1vpopV/EldQ4jjXZLdb9SS6y2
+7oXGujl5DPnmne95TTh5wXsb7A2RgnYc/7GqpzZrPgCYDekXtLngNdsbE2ibdMjU
+UBYWN477BIT2723e2K61yMPnj5sYl0Mw1wqBAItkbDx7khJEoC7lmI2ZHe9e3ODJ
+mwaq497Oq5R3Y/B9i9sY
+=gn9g
 -----END PGP SIGNATURE-----
