@@ -1,6 +1,11 @@
 # ChangeLog for sys-kernel/linux-headers
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.385 2013/06/09 23:05:10 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-kernel/linux-headers/ChangeLog,v 1.386 2013/08/16 19:16:03 vapier Exp $
+
+*linux-headers-3.10 (16 Aug 2013)
+
+  16 Aug 2013; Mike Frysinger <vapier@gentoo.org> +linux-headers-3.10.ebuild:
+  Version bump.
 
   09 Jun 2013; Mike Frysinger <vapier@gentoo.org> metadata.xml:
   Add upstream CPE tag (security info) from ChromiumOS.
